hc refactor; svc2svc working from api to venue

--- a/src/SportsData.Api/appsettings.json
+++ b/src/SportsData.Api/appsettings.json
@@ -7,31 +7,31 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://contest-service:8080"
+    "ApiUrl": "http://contest-service:8080/api/"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://franchise-service:8080"
+    "ApiUrl": "http://franchise-service:8080/api/"
   },
   "NotificationProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://notification-service:8080"
+    "ApiUrl": "http://notification-service:8080/api/"
   },
   "PlayerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://player-service:8080"
+    "ApiUrl": "http://player-service:8080/api/"
   },
   "ProducerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://prodcuer-service:8080"
+    "ApiUrl": "http://producer-service:8080/api/"
   },
   "SeasonProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://season-service:8080"
+    "ApiUrl": "http://season-service:8080/api/"
   },
   "VenueProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://venue-service:8080"
+    "ApiUrl": "http://venue-service:8080/api/"
   },
   "AllowedHosts": "*"
 }
