--- a/src/SportsData.Api/appsettings.Development.json
+++ b/src/SportsData.Api/appsettings.Development.json
@@ -7,31 +7,31 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://localhost:5066/"
+    "ApiUrl": "http://localhost:5066/api/"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://localhost:5021/"
+    "ApiUrl": "http://localhost:5021/api/"
   },
   "NotificationProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://localhost:5068/"
+    "ApiUrl": "http://localhost:5068/api/"
   },
   "PlayerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://localhost:5163/"
+    "ApiUrl": "http://localhost:5163/api/"
   },
   "ProducerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://localhost:5131/"
+    "ApiUrl": "http://localhost:5231/api/"
   },
   "SeasonProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://localhost:5037/"
+    "ApiUrl": "http://localhost:5037/api/"
   },
   "VenueProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://localhost:5253/"
+    "ApiUrl": "http://localhost:5253/api/"
   },
   "AllowedHosts": "*"
 }
