--- a/src/SportsData.Api/Properties/launchSettings.json
+++ b/src/SportsData.Api/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Debug"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5262"
