--- a/src/SportsData.Api/appsettings.Debug.json
+++ b/src/SportsData.Api/appsettings.Debug.json
@@ -7,31 +7,31 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://contest-service:8080/api/"
+    "ApiUrl": "http://localhost:5066/api/"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://franchise-service:8080/api/"
+    "ApiUrl": "http://localhost:5021/api/"
   },
   "NotificationProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://notification-service:8080/api/"
+    "ApiUrl": "http://localhost:5068/api/"
   },
   "PlayerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://player-service:8080/api/"
+    "ApiUrl": "http://localhost:5163/api/"
   },
   "ProducerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://producer-service:8080/api/"
+    "ApiUrl": "http://localhost:5231/api/"
   },
   "SeasonProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://season-service:8080/api/"
+    "ApiUrl": "http://localhost:5037/api/"
   },
   "VenueProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://venue-service:8080/api/"
+    "ApiUrl": "http://localhost:5253/api/"
   },
   "AllowedHosts": "*"
 }
