all svcs able to communicate with local db (cluster external)

--- a/src/SportsData.Api/appsettings.json
+++ b/src/SportsData.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://contest-service:8080/api/"
+    "ApiUrl": "http://contest-service/api/"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
