--- a/src/SportsData.Franchise/SportsData.Franchise.csproj
+++ b/src/SportsData.Franchise/SportsData.Franchise.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>bbd79512-46f6-4fcd-86d9-1507340329e0</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+	  <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
