--- a/src/SportsData.Api/appsettings.Local.json
+++ b/src/SportsData.Api/appsettings.Local.json
@@ -7,31 +7,31 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://contest-service:8080/api/"
+    "ApiUrl": "http://contest-service/api/"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://franchise-service:8080/api/"
+    "ApiUrl": "http://franchise-service/api/"
   },
   "NotificationProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://notification-service:8080/api/"
+    "ApiUrl": "http://notification-service/api/"
   },
   "PlayerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://player-service:8080/api/"
+    "ApiUrl": "http://player-service/api/"
   },
   "ProducerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://producer-service:8080/api/"
+    "ApiUrl": "http://producer-service/api/"
   },
   "SeasonProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://season-service:8080/api/"
+    "ApiUrl": "http://season-service/api/"
   },
   "VenueProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://venue-service:8080/api/"
+    "ApiUrl": "http://venue-service/api/"
   },
   "AllowedHosts": "*"
 }
