--- a/src/SportsData.Contest/appsettings.Development.json
+++ b/src/SportsData.Contest/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    // MSSQL
+    "AppDataContext": "Server=192.168.0.3;Initial Catalog=contest;User=sa;Password=sesame1?;TrustServerCertificate=True"
   }
 }
