--- a/src/SportsData.Notification/SportsData.Notification.csproj
+++ b/src/SportsData.Notification/SportsData.Notification.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>1b442df9-069f-4b0a-810c-986653a8e58d</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+	  <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
