--- a/src/SportsData.Player/SportsData.Player.csproj
+++ b/src/SportsData.Player/SportsData.Player.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>13c1f71b-6cee-42e4-bded-0d9020129376</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+	  <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
