--- a/src/SportsData.Producer/SportsData.Producer.csproj
+++ b/src/SportsData.Producer/SportsData.Producer.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>ce03f737-f257-48a1-94b9-e9dd7ac70a3f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+	  <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
