--- a/src/SportsData.Season/SportsData.Season.csproj
+++ b/src/SportsData.Season/SportsData.Season.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>2d16cfc4-034a-48a8-894f-5b38c50affb0</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+	  <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
