--- a/src/SportsData.Season/appsettings.json
+++ b/src/SportsData.Season/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    // MSSQL
+    "AppDataContext": "Server=BENDER;Initial Catalog=contest;User=sa;Password=sesame1?;TrustServerCertificate=True"
+  }
 }
