update svc names for local

--- a/src/SportsData.Api/appsettings.Local.json
+++ b/src/SportsData.Api/appsettings.Local.json
@@ -7,31 +7,31 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://contest-service/api/"
+    "ApiUrl": "http://contest-svc/api/"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://franchise-service/api/"
+    "ApiUrl": "http://franchise-svc/api/"
   },
   "NotificationProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://notification-service/api/"
+    "ApiUrl": "http://notification-svc/api/"
   },
   "PlayerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://player-service/api/"
+    "ApiUrl": "http://player-svc/api/"
   },
   "ProducerProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://producer-service/api/"
+    "ApiUrl": "http://producer-svc/api/"
   },
   "SeasonProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://season-service/api/"
+    "ApiUrl": "http://season-svc/api/"
   },
   "VenueProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://venue-service/api/"
+    "ApiUrl": "http://venue-svc/api/"
   },
   "AllowedHosts": "*"
 }
