--- a/src/SportsData.Contest/appsettings.json
+++ b/src/SportsData.Contest/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // MSSQL
-    "AppDataContext": "Server=192.168.0.3,1433;Initial Catalog=contest;User=sa;Password=sesame1?;TrustServerCertificate=True"
+    "AppDataContext": "Server=192.168.0.3,1433;Initial Catalog=sdContest;User=sa;Password=sesame1?;TrustServerCertificate=True"
   }
 }
