--- a/src/SportsData.Producer/appsettings.Local.json
+++ b/src/SportsData.Producer/appsettings.Local.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDataContext": "Server=contest-db-svc;Database=contest;User Id=sa;Password=sesame1?;TrustServerCertificate=True;Encrypt=False"
+    "AppDataContext": "Server=producer-svc-db;Database=sdProducer;User Id=sa;Password=sesame1?;TrustServerCertificate=True;Encrypt=False"
   }
 }
