--- a/src/SportsData.Contest/appsettings.Local.json
+++ b/src/SportsData.Contest/appsettings.Local.json
@@ -1,11 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://seq-svc:5341/" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
   "ConnectionStrings": {
     "AppDataContext": "Server=contest-svc-db;Database=sdContest;User Id=sa;Password=sesame1?;TrustServerCertificate=True;Encrypt=False"
   }
