local working with serilog (seq in local container); prep Masstransit

--- a/src/SportsData.Provider/appsettings.Development.json
+++ b/src/SportsData.Provider/appsettings.Development.json
@@ -1,8 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://localhost:5341/" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    // MSSQL
+    "AppDataContext": "Server=192.168.0.3;Initial Catalog=sdProvider;User=sa;Password=sesame1?;TrustServerCertificate=True"
   }
 }
