moving to azure app config

--- a/src/SportsData.Franchise/SportsData.Franchise.csproj
+++ b/src/SportsData.Franchise/SportsData.Franchise.csproj
@@ -8,6 +8,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
 	  <InvariantGlobalization>false</InvariantGlobalization>
+	  <Configurations>Debug;Release;Local</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
