--- a/src/SportsData.Provider/appsettings.json
+++ b/src/SportsData.Provider/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ProviderDataContext": "Host=db;Port=5432;Database=provider;Username=postgres;Password=postgres;Include Error Detail=true",
-    "Hangfire": "Host=db;Port=5432;Database=provider;Username=postgres;Password=postgres;Include Error Detail=true"
-  }
+  "AllowedHosts": "*"
 }
