--- a/src/SportsData.Contest/SportsData.Contest.csproj
+++ b/src/SportsData.Contest/SportsData.Contest.csproj
@@ -8,7 +8,16 @@
 	<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	<DockerfileContext>..\..</DockerfileContext>
 	<InvariantGlobalization>false</InvariantGlobalization>
+	<Configurations>Debug;Release;Local</Configurations>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Remove="secrets.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="secrets.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
@@ -20,6 +29,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SportsData.Core\SportsData.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Config\" />
   </ItemGroup>
 
 </Project>
