--- a/src/SportsData.Contest/appsettings.json
+++ b/src/SportsData.Contest/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    // MSSQL
-    "AppDataContext": "Server=192.168.0.3,1433;Initial Catalog=sdContest;User=sa;Password=sesame1?;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*" 
 }
