--- a/src/SportsData.Notification/appsettings.Local.json
+++ b/src/SportsData.Notification/appsettings.Local.json
@@ -17,8 +17,5 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AppDataContext": "Server=notification-svc-db;Database=sdNotification;User Id=sa;Password=sesame1?;TrustServerCertificate=True;Encrypt=False"
-  }
+  "AllowedHosts": "*"
 }
