--- a/src/SportsData.Notification/appsettings.json
+++ b/src/SportsData.Notification/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    // MSSQL
-    "AppDataContext": "Server=BENDER;Initial Catalog=contest;User=sa;Password=sesame1?;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
