--- a/src/SportsData.Player/appsettings.Development.json
+++ b/src/SportsData.Player/appsettings.Development.json
@@ -17,9 +17,5 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    // MSSQL
-    "AppDataContext": "Server=192.168.0.3;Initial Catalog=sdPlayer;User=sa;Password=sesame1?;TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
