commit prior to adding OpenTelemetry

--- a/src/SportsData.Provider/appsettings.json
+++ b/src/SportsData.Provider/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ProviderDocDatabase": {
+    "ConnectionString": "mongodb://localhost",
+    "DatabaseName": "Provider",
+    "CollectionName": "Venues"
+  }
 }
