--- a/src/SportsData.Producer/SportsData.Producer.csproj
+++ b/src/SportsData.Producer/SportsData.Producer.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <Folder Include="Application\Contests\" />
+    <Folder Include="Application\Documents\Processors\Football\Nfl\" />
     <Folder Include="Application\Franchises\" />
     <Folder Include="Application\Seasons\" />
     <Folder Include="Application\Players\" />
