--- a/test/unit/SportsData.Producer.Tests.Unit/SportsData.Producer.Tests.Unit.csproj
+++ b/test/unit/SportsData.Producer.Tests.Unit/SportsData.Producer.Tests.Unit.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
@@ -16,6 +18,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\SportsData.Producer\SportsData.Producer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Application\Handlers\" />
   </ItemGroup>
 
 </Project>
