launch settings, processor reorg, svc instance by sport

--- a/src/SportsData.Api/SportsData.Api.csproj
+++ b/src/SportsData.Api/SportsData.Api.csproj
@@ -9,6 +9,7 @@
 	<DockerfileContext>..\..</DockerfileContext>
 	<DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	<InvariantGlobalization>false</InvariantGlobalization>
+	<Configurations>Debug;Release;Provider - FootballNcaa</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
