--- a/src/SportsData.Producer/SportsData.Producer.csproj
+++ b/src/SportsData.Producer/SportsData.Producer.csproj
@@ -8,6 +8,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
 	  <InvariantGlobalization>false</InvariantGlobalization>
+	  <Configurations>Debug;Release;Provider - FootballNcaa</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -32,7 +33,8 @@
 
   <ItemGroup>
     <Folder Include="Application\Contests\" />
-    <Folder Include="Application\Documents\Processors\Football\Nfl\" />
+    <Folder Include="Application\Documents\Processors\Providers\Cbs\" />
+    <Folder Include="Application\Documents\Processors\Providers\Yahoo\" />
     <Folder Include="Application\Franchises\" />
     <Folder Include="Application\Seasons\" />
     <Folder Include="Application\Players\" />
