--- a/src/SportsData.Season/SportsData.Season.csproj
+++ b/src/SportsData.Season/SportsData.Season.csproj
@@ -8,6 +8,7 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
 	  <InvariantGlobalization>false</InvariantGlobalization>
+	  <Configurations>Debug;Release;Provider - FootballNcaa</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
