--- a/test/unit/SportsData.Producer.Tests.Unit/SportsData.Producer.Tests.Unit.csproj
+++ b/test/unit/SportsData.Producer.Tests.Unit/SportsData.Producer.Tests.Unit.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <Configurations>Debug;Release;Provider - FootballNcaa</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
