corrected issue with EFCore logging

--- a/src/SportsData.Producer/appsettings.Development.json
+++ b/src/SportsData.Producer/appsettings.Development.json
@@ -1,13 +1,13 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq", "Serilog.Sinks.OpenTelemetry" ],
+    "Using": [ "Serilog.Sinks.Seq", "Serilog.Sinks.OpenTelemetry" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Warning",
         "System": "Warning",
-        "Microsoft.EntityFrameworkCore.Database": "Information"
+        "Microsoft.EntityFrameworkCore.Database": "Warning"
       }
     },
     "WriteTo": [
