--- a/src/SportsData.Producer/appsettings.Local.json
+++ b/src/SportsData.Producer/appsettings.Local.json
@@ -5,8 +5,9 @@
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information",
-        "System": "Warning"
+        "Microsoft.Hosting.Lifetime": "Warning",
+        "System": "Warning",
+        "Microsoft.EntityFrameworkCore.Database": "Warning"
       }
     },
     "WriteTo": [
