dto refactor;  patterns for multi-sport

--- a/src/SportsData.Producer/SportsData.Producer.csproj
+++ b/src/SportsData.Producer/SportsData.Producer.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <Folder Include="Application\Contests\" />
     <Folder Include="Application\Documents\Processors\Providers\Cbs\" />
+    <Folder Include="Application\Documents\Processors\Providers\Espn\Basketball\" />
+    <Folder Include="Application\Documents\Processors\Providers\Espn\Common\" />
     <Folder Include="Application\Documents\Processors\Providers\Yahoo\" />
     <Folder Include="Application\Franchises\" />
     <Folder Include="Application\Seasons\" />
