update build agent

--- a/src/UI/sd-ui/azure-pipelines.yml
+++ b/src/UI/sd-ui/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
       - sd-ui/**
 
 pool:
-  vmImage: 'ubuntu-latest'
+  name: Default
 
 variables:
   app_location: "."          # Since YAML is at sd-ui root
