--- a/src/DockerfileApi
+++ b/src/DockerfileApi
@@ -1,21 +1,21 @@
 # See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
 # This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/SportsData.Api/SportsData.Api.csproj", "src/SportsData.Api/"]
-COPY ["src/SportsData.Core/SportsData.Core.csproj", "src/SportsData.Core/"]
-RUN dotnet restore "./src/SportsData.Api/SportsData.Api.csproj"
+COPY ["../SportsData.Api/SportsData.Api.csproj", "SportsData.Api/"]
+COPY ["../SportsData.Core/SportsData.Core.csproj", "SportsData.Core/"]
+RUN dotnet restore "./SportsData.Api/SportsData.Api.csproj"
 COPY . .
-WORKDIR "/src/src/SportsData.Api"
+WORKDIR "/src/SportsData.Api"
 RUN dotnet build "./SportsData.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
