update api dockerfile for globalization

--- a/src/DockerfileApi
+++ b/src/DockerfileApi
@@ -1,8 +1,13 @@
-# Use the official ASP.NET Core runtime as a base for final app
+﻿# Use the official ASP.NET Core runtime as a base for final app
 FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS base
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
+
+# Install ICU and enable full globalization
+RUN apk add --no-cache icu-libs \
+    && echo "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false" >> /etc/environment
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 
 # Build stage
 FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
@@ -33,4 +38,5 @@ RUN dotnet publish "SportsData.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publi
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
 ENTRYPOINT ["dotnet", "SportsData.Api.dll"]
