cookie host changes

--- a/src/SportsData.Api/appsettings.Development.json
+++ b/src/SportsData.Api/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "CookieDomain": "localhost",
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq", "Serilog.Sinks.OpenTelemetry" ],
     "MinimumLevel": {
