--- a/src/SportsData.Api/appsettings.json
+++ b/src/SportsData.Api/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CookieDomain": "localhost",
   "ContestProviderConfig": {
     "SecretKey": "foo",
     "ApiUrl": "http://contest-service/api/"
