--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -7,11 +7,14 @@ trigger:
     include:
       - 'src/SportsData.Api/*'
 
+# Centralized agent and demand config for all stages/jobs
 pool:
   name: Default
+  demands:
+    - Agent.Name -equals Bender
 
 resources:
-- repo: self
+  - repo: self
 
 variables:
   # Container registry service connection established during pipeline creation
@@ -35,80 +38,67 @@ variables:
   appName: 'sportdeets-api-dev'
 
 stages:
-- stage: BuildAndTest
-  displayName: 'Build & Test: API'
-  jobs:
-  - job: BuildAndTest
+  - stage: BuildAndTest
     displayName: 'Build & Test: API'
-    pool:
-      name: Default
-      demands:
-        - Agent.Name -equals Bender
-    steps:
-    - task: UseDotNet@2
-      displayName: 'Use .NET 9 SDK'
-      inputs:
-        packageType: 'sdk'
-        version: '9.0.x'
-        includePreviewVersions: true
+    jobs:
+      - job: BuildAndTest
+        displayName: 'Build & Test: API'
+        steps:
+          - task: UseDotNet@2
+            displayName: 'Use .NET 9 SDK'
+            inputs:
+              packageType: 'sdk'
+              version: '9.0.x'
+              includePreviewVersions: true
 
-    - task: NuGetCommand@2
-      displayName: 'NuGet Restore'
-      inputs:
-        command: 'restore'
-        restoreSolution: '**/sports-data-api.sln'
-        feedsToUse: 'select'
-        vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
+          - task: NuGetCommand@2
+            displayName: 'NuGet Restore'
+            inputs:
+              command: 'restore'
+              restoreSolution: '**/sports-data-api.sln'
+              feedsToUse: 'select'
+              vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
 
-    - task: MSBuild@1
-      displayName: 'Build sports-data-api solution'
-      inputs:
-        solution: '**/sports-data-api.sln'
-        msbuildArchitecture: 'x64'
-        clean: true
-        platform: '$(buildPlatform)'
-        configuration: '$(buildConfiguration)'
-        restoreNugetPackages: true
-        msbuildArguments: '/t:Restore'
+          - task: MSBuild@1
+            displayName: 'Build sports-data-api solution'
+            inputs:
+              solution: '**/sports-data-api.sln'
+              msbuildArchitecture: 'x64'
+              clean: true
+              platform: '$(buildPlatform)'
+              configuration: '$(buildConfiguration)'
+              restoreNugetPackages: true
+              msbuildArguments: '/t:Restore'
 
-- stage: BuildImagePushACR
-  displayName: 'Build Image & Push to ACR'
-  dependsOn: BuildAndTest
-  jobs:
-  - job: BuildImage
-    displayName: 'Build and Push Image'
-    pool:
-      name: Default
-      demands:
-        - Agent.Name -equals Bender
-    steps:
-    - task: Docker@2
-      displayName: 'Build & Push'
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+  - stage: BuildImagePushACR
+    displayName: 'Build Image & Push to ACR'
+    dependsOn: BuildAndTest
+    jobs:
+      - job: BuildImage
+        displayName: 'Build and Push Image'
+        steps:
+          - task: Docker@2
+            displayName: 'Build & Push'
+            inputs:
+              command: buildAndPush
+              repository: $(imageRepository)
+              dockerfile: $(dockerfilePath)
+              containerRegistry: $(dockerRegistryServiceConnection)
+              tags: |
+                $(tag)
 
-- stage: DeployToAppService
-  displayName: 'Deploy: API to Azure App Service'
-  dependsOn: BuildImagePushACR
-  condition: succeeded()
-  jobs:
-  - job: Deploy
-    displayName: 'Deploy container to Azure Web App'
-    pool:
-      name: Default
-      demands:
-        - Agent.Name -equals Bender
-    steps:
-    - task: AzureWebAppContainer@1
-      displayName: 'Deploy to Azure Web App (Container)'
-      inputs:
-        azureSubscription: $(azureSubscription)
-        appName: $(appName)
-        containers: |
-          $(containerRegistry)/$(imageRepository):$(tag)
-
+  - stage: DeployToAppService
+    displayName: 'Deploy: API to Azure App Service'
+    dependsOn: BuildImagePushACR
+    condition: succeeded()
+    jobs:
+      - job: Deploy
+        displayName: 'Deploy container to Azure Web App'
+        steps:
+          - task: AzureWebAppContainer@1
+            displayName: 'Deploy to Azure Web App (Container)'
+            inputs:
+              azureSubscription: $(azureSubscription)
+              appName: $(appName)
+              containers: |
+                $(containerRegistry)/$(imageRepository):$(tag)
