--- a/src/SportsData.Contest/Properties/launchSettings.json
+++ b/src/SportsData.Contest/Properties/launchSettings.json
@@ -15,7 +15,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "APPCONFIG_LABEL": "Local"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7092;http://localhost:5066"
@@ -38,6 +39,18 @@
       },
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "http.FootballNcaa": {
+      "commandName": "Project",
+      "commandLineArgs": "-mode FootballNcaa",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "APPCONFIG_LABEL": "Local"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5066"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
