trying to get Producer stood up

--- a/src/SportsData.Producer/azure-pipelines.yml
+++ b/src/SportsData.Producer/azure-pipelines.yml
@@ -94,7 +94,7 @@ stages:
           $(tag)
 
 - stage: DeployToAppService
-  displayName: 'Deploy: API to Azure App Service'
+  displayName: 'Deploy: Producer to Azure App Service'
   dependsOn: BuildImagePushACR
   condition: succeeded()
   jobs:
