--- a/src/SportsData.Provider/appsettings.json
+++ b/src/SportsData.Provider/appsettings.json
@@ -5,10 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ProviderDocDatabase": {
-    "ConnectionString": "mongodb://localhost",
-    "DatabaseName": "Provider",
-    "CollectionName": "Venues"
-  }
+  "AllowedHosts": "*"
 }
