--- a/src/SportsData.Provider/azure-pipelines.yml
+++ b/src/SportsData.Provider/azure-pipelines.yml
@@ -75,6 +75,7 @@ stages:
             command: 'test'
             projects: '**/SportsData.Provider.Tests.Unit.csproj'
             testRunTitle: 'provider-tests-unit'
+          continueOnError: false
 
 - stage: BuildImagePushACR
   displayName: Build Image & Push to ACR
